# TetrisGL

./: .gitignore  CMakeLists.txt  README.md
lib/: fmod64_vc.lib  fmodL64_vc.lib  fmodL_vc.lib  fmod_vc.lib  freetype32.lib  freetype32d.lib  freetype64.lib  freetype64d.lib  glew32.lib  glew32d.lib  glew32s.lib  glew32sd.lib  glew64.lib  glew64d.lib  glew64s.lib  glew64sd.lib  glfw3.lib  glfw3d.lib  glfw3s.lib  glfw3sd.lib  glfw3x64.lib  glfw3x64d.lib  glfw3x64s.lib  glfw3x64sd.lib
proj/vs12/: TetrisGL.sln  TetrisGL.vcxproj  TetrisGL.vcxproj.filters
proj/vs14/: TetrisGL.vcxproj  TetrisGL.vcxproj.filters
src/: Actions.cpp  Actions.h  Application.cpp  Application.h  Background.cpp  Background.h  Binding.cpp  Binding.h  Bindings.cpp  Bindings.h  Block.cpp  Block.h  Cell.cpp  Cell.h  CellArray.cpp  CellArray.h  Control.cpp  Control.h  Controller.cpp  Controller.h  Crosy.cpp  Crosy.h  DropSparkle.cpp  DropSparkle.h  DropTrail.cpp  DropTrail.h  Field.cpp  Field.h  Figure.cpp  Figure.h  FpsCounter.cpp  FpsCounter.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GlassView.cpp  GlassView.h  Globals.cpp  Globals.h  (+48 more)
